# data-transfer

./: Dockerfile  README.md  build.Dockerfile  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
akhq/: docker-compose.yaml
kafka/: docker-compose.yml
timing_parser/: timing_parser.py
